src/objects/Access_Template__c.object
<CustomObject>
    <fields>
        <fullName>Access_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Access Item</label>
        <referenceTo>Access_Item__c</referenceTo>
        <relationshipLabel>Access Template</relationshipLabel>
        <relationshipName>Access_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Access__c</fullName>
        <formula>Access_Item__r.Item_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Access</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Keep</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Access Template</relationshipLabel>
        <relationshipName>Access_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomizationCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customization Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Access Template (Customization Case)</relationshipLabel>
        <relationshipName>Access_Template1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(Access_Item__r.Item_Type__c)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Access Template</label>
    <listViews>
        <fullName>Custom_Access_ITS_Approval_Access_Template</fullName>
        <filterScope>Queue</filterScope>
        <label>Custom Access ITS Approval</label>
        <queue>Custom_Access_ITS_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Access Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>